--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
+title: Sibo Dong
+logo: /assets/img/logo.png
+description: CS Ph.D. Student at Georgetown University
+show_downloads: true
+google_analytics:
 theme: jekyll-theme-minimal
