--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Sibo Dong
-logo: /assets/img/logo.png
+logo: /assets/img/logo.jpeg
 description: CS Ph.D. Student at Georgetown University
 show_downloads: true
 google_analytics:
