--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Sibo Dong
-logo: /assets/img/logo.jpeg
+logo: /assets/img/self.jpeg
 description: CS Ph.D. Student at Georgetown University
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
